<140> | Fix status response alignment issue | <Ashok>

--- a/src/components/ResponsePanel/index.scss
+++ b/src/components/ResponsePanel/index.scss
@@ -58,6 +58,7 @@
       display: flex;
       align-items: center;
       font-size: 15px;
+      white-space: nowrap;
     }
 
     .response-header-right {
@@ -65,6 +66,7 @@
       align-items: center;
       gap: 15px;
       padding-right: 2px;
+      white-space: nowrap
     }
 
     .response-size {
